Bug 537507.  Make sure to flag XUL documents as allowing InitialReflow to be called on the presshell even if there are no presshells around when StartLayout is called on the document.  r=jst