content/xul/document/src/nsXULDocument.cpp
@@ -2016,6 +2016,7 @@ nsXULDocument::Init()
 nsresult
 nsXULDocument::StartLayout(void)
 {
+    mMayStartLayout = PR_TRUE;
     nsCOMPtr<nsIPresShell> shell = GetPrimaryShell();
     if (shell) {
 
@@ -2054,8 +2055,6 @@ nsXULDocument::StartLayout(void)
                 }
             }
         }
-
-        mMayStartLayout = PR_TRUE;
 
         // Don't try to call GetVisibleArea earlier than this --- the EnableRefresh call
         // above can flush reflows, which can cause a parent document to be flushed,
